# astu

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  NOTES.md  README.md  TODO.md  Taskfile.yml  flake.nix  go.mod  go.sum  main.go
.cargo/: config.toml
.github/: FUNDING.yml  dependabot.yml  mergify.yml  renovate.json5
.github/workflows/: book.yml  build.yml  ci.yml  dependabot-automerge.yml  deploy-docs.yml  release-plz.yml  release.yml  renovate.yml
action/: Cargo.toml
action/examples/: iexec.rs  tcp_ping.rs
action/src/: client.rs  lib.rs  ssh.rs  tcp.rs  transport.rs
action/src/client/: dynamic.rs  ssh.rs  tcp.rs
action/src/transport/: opaque.rs  tcp.rs  tcp_reuse.rs
astu-action/: Cargo.toml
astu-action/src/: lib.rs
astu-action/src/client/: dynamic.rs  mod.rs  ssh.rs  tcp.rs
astu-action/src/command/: mod.rs  openssh.rs
astu-action/src/transport/: mod.rs  opaque.rs  tcp.rs  tcp_reuse.rs
astu-cli/: Cargo.toml
astu-cli/src/: lib.rs  run.rs
astu-cli/src/arg/: action.rs  global.rs  mod.rs  result.rs
astu-cli/src/cmd/: freq.rs  gc.rs  jobs.rs  lookup.rs  mod.rs  output.rs  ping.rs  result_field.rs  resume.rs  run.rs  tasks.rs  trace.rs
astu-core/: Cargo.toml
astu-core/src/: id.rs  lib.rs  util.rs
astu-db/: Cargo.toml
astu-engine/: Cargo.toml
astu-resolve/: Cargo.toml
astu-resolve/src/: lib.rs
astu-resolve/src/provider/: chain.rs  cidr.rs  dns.rs  mod.rs
astu-types/: Cargo.toml
astu-types/src/: lib.rs  target.rs
book/: book.toml
book/src/: SUMMARY.md  architecture.md  cli.md  developing.md  introduction.md  quickstart.md
book/src/architecture/: targets.md
book/src/cli/: index.md
book/src/cli/action/: index.md  lookup.md  ping.md  resume.md  run.md
book/src/cli/other/: doctor.md  gc.md  index.md  jobs.md  tasks.md
book/src/cli/result/: freq.md  index.md  output.md  trace.md
cli/: CHANGELOG.md  Cargo.toml
cli/src/: argetype.rs  arggroup.rs  args.rs  cmd.rs  field.rs  main.rs  report.rs  runtime.rs  ui.rs
cli/src/action/: confirm.rs  mod.rs  stdin.rs  template.rs
cli/src/argetype/: connection.rs  global.rs  resolution.rs
cli/src/arggroup/: global.rs  resolution.rs
cli/src/args/: action.rs  auth.rs  connection.rs  global.rs  job.rs  resolution.rs
cli/src/cmd/: common.rs  cp.rs  exec.rs  freq.rs  gc.rs  jobs.rs  output.rs  ping.rs  render.rs  resolve.rs  resume.rs  tasks.rs  trace.rs
cli/src/mapper/: ssh.rs
cli/tests/: large_output_workload.rs  revamp_integration.rs
cmd/: fsociety.go  k8s.go  k8s_exec-container.go  k8s_exec-node.go  k8s_run-container.go  ping.go  replicate.go  root.go  version.go
crates/astu-action/src/transport/: mod.rs
crates/astu-cli/: Cargo.toml
crates/astu-cli/src/: lib.rs
crates/astu-cli/src/arg/: global.rs  mod.rs
crates/astu-cli/src/cmd/: gc.rs  jobs.rs  lookup.rs  output.rs  ping.rs  resume.rs  run.rs  tasks.rs  trace.rs
crates/astu-core/src/: lib.rs
crates/astu-db/: Cargo.toml
crates/astu-db/src/: lib.rs
crates/astu-resolve/: Cargo.toml
db/: Cargo.toml  build.rs  test.sqlite3
db/migrations/sqlite/: 20240907051107_init.sql  20250328035616_ping.sql
db/src/: file.rs  lib.rs  sqlite.rs
docs/: docusaurus.config.ts  package.json
docs/cli/: help.md  migration-revamp.md
docs/docs/: Demo.md  Installation.md
docs/plans/: 2026-03-02-cli-contract-matrix.md  2026-03-02-cli-revamp.md
docs/src/components/HomepageFeatures/: index.tsx
docs/src/css/: custom.css
docs/src/pages/: index.tsx
examples/: kush.go  kxx.go
internal/pkg/k8s/: k8s.go
internal/pkg/ping/: ping.go
internal/pkg/printer/: printer.go
internal/pkg/util/: cmdrunner.go  filter.go  hash.go
kush-cli/: Cargo.toml
kush-cli/src/: cli.rs  main.rs
kush-cli/src/argetype/: resolution.rs
kush-cli/src/cli/: exec.rs  resolve.rs
kush-cli/src/mapper/: ssh.rs
kush-connect/: Cargo.toml
kush-connect/src/: lib.rs  ssh.rs  tcp.rs  tcpsocket.rs
kush-connect/src/tcp/: reuseport.rs
kush-connect/src/tcpsocket/: default.rs  reuseport.rs
kush-resolve/: Cargo.toml  dns.rs
kush-resolve/src/: cidr.rs  dns.rs  file.rs  forward_chain.rs  ip.rs  lib.rs  target.rs  uri.rs
kush-resolve/test/: file.txt
kush-uri/: Cargo.toml
kush-uri/src/: lib.rs
lib/: CHANGELOG.md  Cargo.toml
lib/examples/: graph.rs  iexec.rs  iri.rs  output_dedupe.rs  uri.rs
lib/migrations/sqlite/: 20250328035616_ping.sql  20250425223857_results.sql
lib/src/: action.rs  db.rs  engine.rs  lib.rs  normalize.rs  resolve.rs  util.rs
lib/src/action/: client.rs  transport.rs
lib/src/action/client/: dummy.rs  dynamic.rs  local.rs  ssh.rs  tcp.rs
lib/src/action/transport/: opaque.rs  tcp.rs  tcp_reuse.rs
lib/src/db/: duckdb.rs  sqlite.rs
lib/src/db/duckdb/: compat.rs  gc.rs  queries.rs  schema.rs  writer.rs
lib/src/resolve/: graph.rs  provider.rs  resolve.rs  target.rs  target2.rs
lib/src/resolve/provider/: chain.rs  cidr.rs  dns.rs  file.rs  k8s.rs
lib/src/util/: dirs.rs  id.rs
lib/tests/: db_compat.rs  task_vars_roundtrip.rs
resolve/: Cargo.toml  README.md
resolve/examples/: dag.rs  graph.rs
resolve/src/: chain.rs  dns.rs  forward_chain.rs  graph.rs  lib.rs  provider.rs  resolve.rs  reverse_chain.rs  target.rs
resolve/src/provider/: chain.rs  cidr.rs  dns.rs  file.rs
scripts/: live_infinite_stdin_demo.sh
src/: cli.rs  config.rs  k8s.rs  main.rs  selection.rs  target_types.rs  target_types.rs.bak
src/cli/: cp.rs  exec.rs
src/resolver/: mod.rs
src/selection/: fzf.rs  skim.rs
src/target_types/: k8s.rs
testdata/: config.yaml
util/: Cargo.toml
util/src/: combinator.rs  id.rs  lib.rs  secret.rs  tcp.rs  tcp_stream.rs  tokio.rs
util/src/tcp_stream/: default.rs  reuseport.rs
xtask/: Cargo.toml
xtask/src/: main.rs
