[package]
name = "astu"
description = "Arbitrary Shell Targeting Utility"
version = "0.0.1"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pbar1/astu"
edition = "2024"

[workspace]
members = ["astu-action", "astu-cli", "astu-db", "astu-engine", "astu-resolve", "lib", "xtask"]
resolver = "2"

[dependencies]
astu-cli = { path = "./astu-cli" }
tokio = { version = "1", features = ["full"] }
anyhow = { version = "1", features = ["backtrace"] }

[profile.dist]
inherits = "release"
lto = "thin"
