[workspace]
members = [".", "astu-action", "astu-cli", "astu-core", "astu-db", "astu-resolve", "astu-types", "xtask"]
default-members = ["."]
resolver = "2"

[workspace.package]
version = "0.0.0"
edition = "2024"

[workspace.lints.rust]
async_fn_in_trait = "allow"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
dbg_macro = "deny"
todo = "warn"                                # TODO: Remove when stable
missing_errors_doc = "allow"

[profile.dist]
inherits = "release"
lto = "thin"

# Root crate ------------------------------------------------------------------

[package]
name = "astu"
description = "Arbitrary Shell Targeting Utility"
repository = "https://github.com/pbar1/astu"
license = "MIT OR Apache-2.0"
version.workspace = true
edition.workspace = true

[dependencies]
astu-cli = { path = "./astu-cli" }
tokio = { version = "1", features = ["full"] }
eyre = "0.6"

[lints]
workspace = true
