[package]
name = "astu-action"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
astu-resolve = { path = "../resolve" }
astu-util = { path = "../util" }
russh = "0.49"
socket2 = "0.5"
ssh-key = { version = "0.6.7", features = ["ed25519"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
ssh_config = "0.1.0"

[dev-dependencies]
rstest = "0.24"
