[package]
name = "astu-action"
version = "0.1.0"
edition = "2021"
description = "astu action clients"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1"
astu-resolve = { path = "../resolve" }
async-trait = "0.1"
bon = "3"
bstr = { version = "1", default-features = false }
enum_dispatch = "0.3"
russh = "0.51"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"

[dev-dependencies]
crossterm = "0.28"
rstest = "0.25"
