[package]
name = "astu-action"
version.workspace = true
edition.workspace = true

[dependencies]
eyre = "0.6"
astu-types = { path = "../astu-types" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
openssh = "0.11.6"
tempfile = "3"

[dev-dependencies]
rstest = "0.26"

[lints]
workspace = true
