[package]
name = "astu-types"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
camino = "1"
eyre = "0.6"
fluent-uri = { version = "0.3", features = ["net", "serde"] }
ipnet = "2"
serde = { version = "1", features = ["derive"] }
strum = { version = "0.27", features = ["derive"] }

[dev-dependencies]
rstest = "0.26"

[lints]
workspace = true
