[package]
name = "astu-types"
version.workspace = true
edition.workspace = true

[dependencies]
eyre = "0.6"
camino = "1"
fluent-uri = { version = "0.4", features = ["net", "serde"] }
ipnet = "2"
serde = { version = "1", features = ["derive"] }
strum = { version = "0.27", features = ["derive"] }

[dev-dependencies]
pretty_assertions = "1"
rstest = "0.26"

[lints]
workspace = true
