[package]
name = "astu-cli"
version = "0.1.0"
edition = "2021"
description = "Remote execution multitool"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
astu = { path = "../lib" }
astu-db = { path = "../db" }
camino = { version = "1.1.9", default-features = false }
clap = { version = "4", features = ["derive", "env"] }
enum_dispatch = "0.3"
futures = "0.3"
humantime = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-glog = { version = "0.4", features = ["local-time"] }
tracing-indicatif = { version = "0.3", default-features = false }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
