[package]
name = "astu-cli"
version = "0.0.1"
edition = "2021"
description = "Arbitrary Shell Targeting Utility"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pbar1/astu"

[[bin]]
name = "astu"
path = "src/main.rs"

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
astu = { path = "../lib", version = "0" }
camino = { version = "1.2.2", default-features = false }
clap = { version = "4", features = ["derive", "env"] }
enum_dispatch = "0.3"
futures = "0.3"
humantime = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-glog = { version = "0.4", features = ["local-time"] }
tracing-indicatif = { version = "0.3", default-features = false }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
strfmt = "0.2"
tabled = "0.20"
uuid = { version = "1", features = ["v7"] }
chrono = "0.4"

[dev-dependencies]
assert_cmd = "2"
duckdb = { version = "1", features = ["bundled"] }
predicates = "3"
serial_test = "3"
tempfile = "3"
