[package]
name = "astu-db"
version = "0.1.0"
edition = "2021"

[dependencies]
astu-action = { path = "../action" }
astu-resolve = { path = "../resolve" }
anyhow = "1"
async-trait = "0.1"
futures = "0.3"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate", "derive"] }
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.13", features = ["full"] }

[dev-dependencies]
rstest = "0.24"
tempfile = "3.14.0"
tokio = { version = "1", features = ["full"] }
