[package]
name = "astu-db"
version = "0.1.0"
edition = "2021"
description = "astu persistence"
license = "MIT OR Apache-2.0"

[dependencies]
astu-action = { path = "../action" }
astu-resolve = { path = "../resolve" }
anyhow = "1"
async-trait = "0.1"
futures = "0.3"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate", "derive"] }
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }

[dev-dependencies]
rstest = "0.25"
tempfile = "3"
tokio = { version = "1", features = ["full"] }
