[package]
name = "kush-resolve"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-stream = "0.3.5"
async-trait = "0.1"
fluent-uri = "0.2.0"
futures = "0.3.30"
hickory-resolver = "0.24"
ipnet = "2.9.0"
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1"

[dev-dependencies]
rstest = "0.22.0"
