[package]
name = "astu"
version = "0.0.0"
edition = "2021"
description = "Astu library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pbar1/astu"

[dependencies]
anyhow = "1"
async-stream = "0.3"
async-trait = "0.1"
base32 = "0.5"
bon = "3"
bstr = { version = "1", default-features = false }
camino = "1"
dirs = { version = "6", default-features = false }
enum_dispatch = "0.3"
fluent-uri = { version = "0.3", features = ["net"] }
futures = "0.3"
hickory-resolver = "0.25"
internment = { version = "0.8", features = ["arena"] }
ipnet = "2"
petgraph = "0.8"
russh = "0.51"
sonyflake = "0.3"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
uuid = { version = "1", features = ["v7"] }
whoami = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate", "derive"] }
tabled = "0.18.0"
strum = { version = "0.27.1", features = ["derive"] }

[dev-dependencies]
borrow-or-share = "0.2.2"
crossterm = { version = "0.28" }
rstest = "0.25"
tempfile = "3"
tokio = { version = "1", features = ["full"] }
