[package]
name = "astu"
version = "0.0.0"
edition = "2021"
description = "Astu library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pbar1/astu"

[dependencies]
anyhow = "1"
async-stream = "0.3"
async-trait = "0.1"
base32 = "0.5"
bon = "3"
borrow-or-share = "0.2"
bstr = { version = "1", default-features = false }
camino = "1"
chrono = "0.4"
dirs = { version = "6", default-features = false }
duckdb = { version = "1", features = ["bundled"] }
enum_dispatch = "0.3"
fluent-uri = { version = "0.3", features = ["net", "serde"] }
futures = "0.3"
hickory-resolver = "0.25"
ipnet = "2"
k8s-openapi = { version = "0.26", features = ["latest"] }
kube = { version = "2.0", features = ["runtime", "derive"] }
petgraph = { version = "0.8", features = ["serde-1"] }
russh = "0.56"
serde = { version = "1", features = ["derive"] }
sonyflake = "0.4"
strum = { version = "0.27", features = ["derive"] }
tabled = "0.20"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
uuid = { version = "1", features = ["v7"] }
whoami = "2"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
form_urlencoded = "1.2"

[dev-dependencies]
ahash = "0.8"
borrow-or-share = "0.2.4"
regex = "1"
crossterm = { version = "0.29" }
rstest = "0.26"
tempfile = "3"
tokio = { version = "1", features = ["full"] }
