[package]
name = "astu-resolve"
version = "0.1.0"
edition = "2021"
description = "astu resolvers"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1"
async-trait = "0.1"
camino = "1"
fluent-uri = { version = "0.3", features = ["net"] }
futures = "0.3"
hickory-resolver = "0.25"
internment = "0.8.6"
ipnet = "2"
petgraph = "0.7"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["io-util"] }
tracing = "0.1"

[dev-dependencies]
rstest = "0.25"
