[package]
name = "astu-util"
version = "0.1.0"
edition = "2021"
description = "astu utils"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1"
async-trait = "0.1"
base32 = "0.5"
futures = "0.3"
redact = { version = "0.1", features = ["zeroize"] }
socket2 = "0.5"
sonyflake = "0.3"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
uuid = { version = "1", features = ["v7"] }
whoami = "1"
zeroize = { version = "1", features = ["aarch64"] }

[dev-dependencies]
rstest = "0.25"
