[package]
name = "astu-util"
version = "0.1.0"
edition = "2021"
description = "astu utils"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1"
base32 = "0.5"
dirs = { version = "6", default-features = false }
futures = "0.3"
sonyflake = "0.3"
tokio = { version = "1", default-features = false, features = ["rt", "time"] }
tracing = "0.1"
uuid = { version = "1", features = ["v7"] }
whoami = "1"

[dev-dependencies]
rstest = "0.25"
