[package]
name = "xtask"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
astu-cli = { path = "../astu-cli" }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
clap_mangen = "0.2"
duct = "1"

[lints]
workspace = true
